--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,36 @@
 body {
   font-family: 'Raleway', sans-serif;
-  background-color: #ffffff;
-  
+  font-size: 16px; /* Tamaño de fuente base */
+  line-height: 1.6; /* Espaciado entre líneas */
 }
-.contenedor {
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700; /* Negrita para títulos */
+  margin-bottom: 15px; /* Espaciado después de títulos */
+}
+
+h1 {
+  font-size: 2.5rem; /* Tamaño de fuente para h1 */
+}
+
+h2 {
+  font-size: 1.7rem; /* Tamaño de fuente para h2 */
+}
+
+p {
+  margin-bottom: 15px; /* Espaciado después de párrafos */
+}
+.hero_detail-box p, .derecha p, .derecha2 p {
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 15px;
+  border-radius: 10px;
+  text-align: justify;
+}
+.contenedor,
+.contenedor2 {
   display: flex;
+  flex-wrap: wrap; /* Esto permite que los elementos hijo pasen al siguiente línea si no hay espacio */
 }
 
 .izquierda {
@@ -14,9 +40,7 @@ body {
 .derecha {
   flex: 1;
 }
-.contenedor2 {
-  display: flex;
-}
+
 
 .izquierda2 {
   flex: 1;
@@ -49,8 +73,9 @@ body {
   display: inline-block;
   padding: 15px 45px;
   border-radius: 10px;
+  border-color: #0f0202;
   font-size: 15px;
-  background-color: #ffffff;
+  background-color: #ffffffd2;
   color: #262627;
   font-weight: 600;
   transition: all 0.3s ease 0s;
@@ -122,14 +147,17 @@ a:focus {
   position: relative;
 }
 
-
+img {
+  max-width: 100%; /* Esto hará que las imágenes sean responsivas */
+  height: auto;
+}
 
 .top_container::before {
   content: "";
   position: absolute;
   width: 100%;
   height: 100%;
-  background: url(../images/fondo3.jpg);
+  background: url(../images/azul.jpg);
   background-size: 100% 100%;
   background-position: right bottom;
   background-repeat: no-repeat;
@@ -148,7 +176,6 @@ a:focus {
   height: 75px;
   bottom: 20%;
   left: 6%;
-  background-color: #f7e6d3;
 }
 
 
@@ -162,7 +189,24 @@ a:focus {
   margin-right: 7px;
 }
 
-
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.hero_btn-container {
+  margin-bottom: 40px; /* Aumenta el espacio debajo del botón */
+}
+.hero_img-container {
+  width: 100%; /* Asegura que la imagen no se desborde */
+  display: flex;
+  justify-content: center; /* Centra la imagen horizontalmente */
+  margin-top: 40px; /* Aumenta el espacio encima de la imagen */
+}
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
 .custom_nav-container .nav_search-btn {
   background-image: url(../images/search-icon.png);
   background-size: 22px;
@@ -194,18 +238,17 @@ a:focus {
   outline: none;
 }
 
-.custom_nav-container .navbar-toggler .navbar-toggler-icon {
-  background-image: url(../images/menu.png);
-  background-size: 40px;
-}
 
 /*end header section*/
 
 /* hero section */
 .hero-container {
   display: flex;
-  padding-top: 90px;
-  padding-bottom: 400px;
+  flex-direction: column; /* Cambia a columna para dispositivos móviles */
+  align-items: center; /* Centra los elementos para dispositivos móviles */
+  padding-top: 50px;
+  padding-bottom: 70px; /* Ajusta el padding para que no sea demasiado grande en móviles */
+  width: 100%; /* Asegura que el contenedor no sea más ancho que la pantalla */
 }
 
 .hero_detail-box {
@@ -213,7 +256,7 @@ a:focus {
 }
 
 .hero_img-container {
-  width: 68%;
+  width: 100%;
   margin-right: -25%;
   margin-top: -3%;
 }
@@ -252,7 +295,6 @@ a:focus {
 /* footer section*/
 
 .footer_section {
-  background-color: #f7e6d3;
   padding: 20px 15px;
   font-family: 'Poppins', sans-serif;
 
